--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -3,7 +3,7 @@
 .about {
   padding: 20px 0;
   text-align: center;
-  background: url(/src/img/razno/bg-l.jpg);
+  background: url(/images/razno/bg-l.jpg);
   background-position: center;
   background-size: cover;
 }
@@ -92,7 +92,7 @@
   .about {
     height: 310px;
     padding: 20px 0;
-    background: url(/src/img/razno/bg.jpg);
+    background: url(/images/razno/bg.jpg);
   }
 
   .about-grid-container {
