--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,5 @@
 // @import 'destyle';
+// @import 'destyle';
 @import 'utility';
 @import 'animation';
 @import 'root';
@@ -7,5 +8,6 @@
 @import 'carousel';
 @import 'navigation';
 @import 'about';
+@import 'contact';
 
 @import 'footer';
