--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,16 +8,18 @@ html(lang='en')
 
     title Vizual d.o.o.
 
-    //- CSS
+    // CSS
     link(href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300&display=swap', rel='stylesheet')
-    link(rel='stylesheet', href='stylesheets/style.min.css')
+    link(rel='stylesheet', href='/stylesheets/style.min.css')
 
 body.body-theme
 
+  // Dynamic content
   block content
 
+  // Footer
   footer
     | Sva prava pridržana Vizual d.o.o.
 
-    //- JS
+    // JS
     script(src='javascripts/main.js')
