--- a/sass/_animation.scss
+++ b/sass/_animation.scss
@@ -38,34 +38,23 @@
  * animation slide-right
  * ----------------------------------------
  */
-@-webkit-keyframes slide-right {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(-100%);
-    transform: translateX(-100%);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateX(0%);
-    transform: translateX(0%);
-  }
-}
 @keyframes slide-right {
   0% {
     opacity: 0;
-    -webkit-transform: translateX(-100%);
-    transform: translateX(-100%);
+    // transform: translateX(-100%);
+    transform: translateX(-80%) scale(0.4);
   }
   100% {
     opacity: 1;
-    -webkit-transform: translateX(0%);
-    transform: translateX(0%);
+    transform: none;
   }
 }
 
 .slide-right {
-  -webkit-animation: slide-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  animation: slide-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  // animation: slide-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: slide-right 0.6s 0.5s cubic-bezier(0, 0.9, 0.3, 1.2) forwards;
+  // animation: slide-right 0.6s cubic-bezier(0, 0.5, 0, 1) forwards;
+  opacity: 0;
 }
 
 /* ----------------------------------------------
@@ -78,40 +67,38 @@
  * animation slide-left
  * ----------------------------------------
  */
-@-webkit-keyframes slide-left {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(100%);
-    transform: translateX(100%);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
-}
 @keyframes slide-left {
   0% {
     opacity: 0;
-    -webkit-transform: translateX(100%);
-    transform: translateX(100%);
+    transform: translateX(50%) scale(0.8);
   }
   100% {
     opacity: 1;
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
+    transform: none;
   }
 }
 
-.slide-left-1 {
-  -webkit-animation: slide-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  animation: slide-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+.slide-left {
+  animation: slide-left 0.6s cubic-bezier(0, 0.9, 0.3, 1.2) forwards;
+  opacity: 0;
 }
-.slide-left-2 {
-  -webkit-animation: slide-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.1s both;
-  animation: slide-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.1s both;
+
+.delay-1 {
+  animation-delay: 0.6s;
 }
-.slide-left-3 {
-  -webkit-animation: slide-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.2s both;
-  animation: slide-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.2s both;
+.delay-2 {
+  animation-delay: 0.8s;
+}
+.delay-3 {
+  animation-delay: 1s;
+}
+
+/**
+ * ----------------------------------------
+ * animation pop in
+ * ----------------------------------------
+ */
+.animate-pop-in {
+  animation: pop-in 0.6s cubic-bezier(0, 0.9, 0.3, 1.2) forwards;
+  opacity: 0;
 }
