--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -22,7 +22,7 @@
 -------------------------------------------------- */
 
 .contact-form {
-  text-align: start;
+  text-align: center;
   outline: none;
 
   h2 {
@@ -173,6 +173,7 @@
 @media (min-width: 768px) {
   .contact-form {
     max-width: 400px;
+    text-align: start;
   }
 
   .contact-links-container {
